user and password classes to store all user information, and Database file and class to save and load data to/from binary file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,10 @@ add_executable(BankApp
         Date.cpp
         Date.h
         Person.cpp
-        Person.h)
+        Person.h
+        Password.cpp
+        Password.h
+        User.cpp
+        User.h
+        Database.cpp
+        Database.h)
