ASci interface with error control using classes inherited exception class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,12 @@ add_executable(BankApp
         User.cpp
         User.h
         Database.cpp
-        Database.h)
+        Database.h
+        Interface.cpp
+        Interface.h
+        MainInterface.h
+        MainInterface.cpp
+        AdminInterface.cpp
+        LoginInterface.h
+        LoginInterface.cpp
+)
